--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^0.21.1",
     "discord-buttons": "^2.4.1",
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
     "ts-node-dev": "^1.1.6"
   }
 }
